# audilatorv2

./: .gitignore  README.md
audilatorv2/: Cargo.toml
audilatorv2/src/: dsp.rs  main.rs
controller/: Program.cs  VolumeController.csproj
volume-adjuster/: requirements.txt  volume_adjuster.py
