[package]
name = "audilatorv2"
version = "0.0.1"
edition = "2024"

[dependencies]
cpal = "0.15"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
