[package]
name = "audilator"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
strip = true
